更改一点点离谱代码, 顺便按照 issue 中的意见, 添加了双击切换 proxy 的简单逻辑

--- a/clashN/clashN/Views/ProxiesView.xaml
+++ b/clashN/clashN/Views/ProxiesView.xaml
@@ -163,7 +163,7 @@
                 </ListView.ItemsPanel>
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <Border Width="160" Padding="0">
+                        <Border Width="160" Padding="0" KeyDown="ProxyItem_KeyDown">
                             <DockPanel>
                                 <Border
                                     Width="5"
