--- a/clashN/clashN/Views/LogsView.xaml
+++ b/clashN/clashN/Views/LogsView.xaml
@@ -24,7 +24,10 @@
         <ToolBarTray Margin="0,8,0,8" DockPanel.Dock="Top">
             <ToolBar ClipToBounds="True" Style="{StaticResource MaterialDesignToolBar}">
                 <Button Width="1" Visibility="Hidden">
-                    <materialDesign:PackIcon Kind="ContentSave" />
+                    <materialDesign:PackIcon
+                        Margin="0,0,8,0"
+                        VerticalAlignment="Center"
+                        Kind="ContentSave" />
                 </Button>
                 <TextBlock
                     VerticalAlignment="Center"
@@ -37,7 +40,10 @@
                 <Separator />
                 <Button x:Name="btnDelete" Click="btnDelete_Click">
                     <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="Delete" />
+                        <materialDesign:PackIcon
+                            Margin="0,0,8,0"
+                            VerticalAlignment="Center"
+                            Kind="Delete" />
                     </StackPanel>
                 </Button>
                 <Separator />
