--- a/clashN/clashN/Views/PorfileEditWindow.xaml
+++ b/clashN/clashN/Views/PorfileEditWindow.xaml
@@ -11,7 +11,7 @@
     xmlns:reactiveui="http://reactiveui.net"
     xmlns:resx="clr-namespace:ClashN.Resx"
     xmlns:vms="clr-namespace:ClashN.ViewModels"
-    Title="clashN"
+    Title="ClashN"
     Width="700"
     Height="600"
     x:TypeArguments="vms:ProfileEditViewModel"
