--- a/clashN/clashN/Views/ProfileQrcodeView.xaml
+++ b/clashN/clashN/Views/ProfileQrcodeView.xaml
@@ -6,28 +6,44 @@
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:resx="clr-namespace:ClashN.Resx"
-    MaxWidth="400"
     d:DesignHeight="300"
     d:DesignWidth="300"
     mc:Ignorable="d">
-    <Grid Margin="16">
+    <Grid Margin="30">
         <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="60" />
         </Grid.RowDefinitions>
+
         <Image
-            Name="imgQrcode"
+            x:Name="imgQrcode"
+            Grid.Row="0"
             Width="300"
             Height="300"
             Stretch="UniformToFill" />
-        <Button
+
+        <TextBox
+            x:Name="txtContent"
             Grid.Row="1"
-            Margin="16"
+            Width="300"
+            Margin="0,8"
+            VerticalAlignment="Center"
+            IsReadOnly="True"
+            MaxLines="3"
+            TextWrapping="Wrap"
+            VerticalScrollBarVisibility="Auto" />
+
+        <Button
+            Grid.Row="2"
+            Width="100"
+            Margin="8"
             HorizontalAlignment="Right"
             Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
             Content="{x:Static resx:ResUI.TbConfirm}"
             IsCancel="True"
             IsDefault="True"
             Style="{StaticResource MaterialDesignFlatButton}" />
+
     </Grid>
 </UserControl>
