add: 复制临时设置代理命令行到剪贴板功能

--- a/clashN/clashN/Views/MainWindow.xaml
+++ b/clashN/clashN/Views/MainWindow.xaml
@@ -305,6 +305,10 @@
                             <MenuItem x:Name="menuAddProfileViaScan" Header="{x:Static resx:ResUI.menuAddProfileViaScan}" />
                             <MenuItem x:Name="menuSubUpdate" Header="{x:Static resx:ResUI.menuSubUpdate}" />
                             <MenuItem x:Name="menuSubUpdateViaProxy" Header="{x:Static resx:ResUI.menuSubUpdateViaProxy}" />
+                            <MenuItem Header="{x:Static resx:ResUI.Terminal}">
+                                <MenuItem x:Name="copyCMDSetProxyCmd" Header="{x:Static resx:ResUI.copyCMDSetProxyCmd}" />
+                                <MenuItem x:Name="copyPSSetProxyCmd" Header="{x:Static resx:ResUI.copyPSSetProxyCmd}" />
+                            </MenuItem>
                             <Separator />
                             <MenuItem
                                 x:Name="menuExit"
