1. 替换ClashMeta更新，替换为Mihomo 2. 增加Geo Data的更新按钮

--- a/clashN/clashN/Views/HelpView.xaml
+++ b/clashN/clashN/Views/HelpView.xaml
@@ -149,7 +149,7 @@
                                 Grid.Row="0"
                                 Margin="16,16,16,4"
                                 Style="{StaticResource TabItemTitle}"
-                                Text="Update Clash.Meta Core" />
+                                Text="Update Mihomo Core" />
 
                             <Separator Grid.Row="1" Style="{StaticResource MaterialDesignLightSeparator}" />
 
@@ -160,7 +160,45 @@
                                     Style="{StaticResource MaterialDesignCaptionTextBlock}"
                                     Text="" />
                                 <Button
-                                    x:Name="btnCheckUpdateClashMetaCore"
+                                    x:Name="btnCheckUpdateMihomoCore"
+                                    Width="100"
+                                    Content="{x:Static resx:ResUI.TbHelpCheck}"
+                                    DockPanel.Dock="Right"
+                                    Style="{StaticResource DefButton}" />
+                            </DockPanel>
+                        </Grid>
+                    </DockPanel>
+                </materialDesign:Card>
+                
+                
+                <materialDesign:Card
+                    Width="300"
+                    Margin="8"
+                    Padding="16"
+                    materialDesign:UniformCornerRadius="8">
+                    <DockPanel>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <TextBlock
+                                Grid.Row="0"
+                                Margin="16,16,16,4"
+                                Style="{StaticResource TabItemTitle}"
+                                Text="Update Geo Data" />
+
+                            <Separator Grid.Row="1" Style="{StaticResource MaterialDesignLightSeparator}" />
+
+                            <DockPanel Grid.Row="2" HorizontalAlignment="Right">
+                                <TextBlock
+                                    Grid.Row="0"
+                                    Margin="8"
+                                    Style="{StaticResource MaterialDesignCaptionTextBlock}"
+                                    Text="" />
+                                <Button
+                                    x:Name="btnCheckUpdateGeo"
                                     Width="100"
                                     Content="{x:Static resx:ResUI.TbHelpCheck}"
                                     DockPanel.Dock="Right"
